--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
   "name": "hackathon3",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/client": "^6.27.1",
+    "@sanity/vision": "^3.71.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
     "next": "14.2.15",
+    "next-sanity": "^9.8.39",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "sanity": "^3.71.0",
+    "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
